--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
 </div>
 </div>
 
+<div class="copyright">
+    <p>BB<a href="http://apple.com" target="_blank" id="RHP">A</a>
+    <p>CC</p>
+</div>
+<div class="social">
+    <a href="file:///Users/chris/Desktop/GitHub/UX_UI_19/contact.html" target="_blank" id="social-li">
+    <img src="images/linkedin-transp.png" alt="LinkedIn page for zoe rem">
+    </a>
+</div>
+
   <footer class="footer">
                  <div class="copyright">
                      <p>design by ichristopher 2020 | Style Points by <a href="http://apple.com" target="_blank" id="RHP">me</a>
