trying to jQuery...
trying to jQuery...

--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
+
+<!DOCTYPE html>
 <html>
  <head>
   <title>iChristopher Homework 17 revisited</title>
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Merriweather&family=Montserrat&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Raleway&family=Roboto&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="css/style.css" type="text/css">
+
 </head>
 <body>
-
+<!--Navbar START-->
   <header>
             <div class="navbarContainer">
                 <a id="homeLink">iChristopher</a>
                 <nav>
                     <ul>
+
                         <li><a href="pages/about.html" class="navListItem">Work</a></li>
                         <li>|</li>
                         <li><a href="pages/work.html" class="navListItem">About</a></li>
@@ -19,13 +23,16 @@
                         <li><a href="images/ChristopherLloydRemresumeOctober2020.pdf" class="navListItem">Resume</a></li>
                         <li>|</li>
                         <li><a href="mailto:chrislloyd@me.com" class="navListItem" target="_blank">Contact</a></li>
+                        <li>|</li>
+                        
                     </ul>
                 </nav>
             </div>
     </header>
+<!--Navbar END-->
     <div><br><br><br><br><br><br>
     </div>
-
+<!--HERO SECTION START-->
 <div class="box1">
 </div>
 <div class="box2">
@@ -37,13 +44,16 @@
 </div>
 
 <div><br><br><br><br><br><br>
+  <!--PRELOADER-->
   <section class="grid">
      <div class="gridChild preload"><img class="spinMe" src="images/preloaderG.png"></div>
          </div>
        </div>
      </div>
    </section>
+<!--HERO SECTION END-->
 
+<!--CFGI SECTION START-->
 <div class="caseStudyRecs">
 <div id="outerCFGI">
   <h2 id="CFGItext">Communication for<br>
@@ -58,7 +68,9 @@
 <div id="innerCFGI">
   </div>
 </div>
+<!--CFGI SECTION END-->
 
+<!--CPA SECTION START-->
 <div id="outerCPA">
   <h2 id="CPAtext">The City of Palo Alto<br></h2>
     <p id="CPAtext1"><i>A website redesign focused on overall navigation and <br>
@@ -71,7 +83,9 @@
 <div id="innerCPA">
   </div>
 </div>
+<!--CPA SECTION END-->
 
+<!--CUBBY SECTION START-->
 <div id="outerCubby">
   <h2 id="Cubbytext">Cubby Mobile App</h2><br>
   <p id="Cubbytext1"><i>A class / team project challenge to create a useful<br>
@@ -84,17 +98,41 @@
   </div>
 </div>
 </div>
+<!--CUBBY SECTION END-->
 
+<!--CONTACT ME SECTION START00-->
+<div class="button" id="button1">
+    Click Me
+  </div>
+  <div class="hideMe"></div>
+
+  <div class="button" id="button2">
+    Click Me
+  </div>
+  <div class="cssChange"></div>
+
+  <div class="button" id="button3">
+    Click Me
+  </div>
+  <div class="appendMe"></div>
+
+  <button> Start Animation </button>
+  <div class="animate" style="background:#98bf21;height:100px;width:100px;position:absolute;"></div>
+
+
+<!--CONTACT ME SECTION START-->
 <div class="copyright">
     <p>BB<a href="http://apple.com" target="_blank" id="RHP">A</a>
     <p>CC</p>
 </div>
 <div class="social">
     <a href="file:///Users/chris/Desktop/GitHub/UX_UI_19/contact.html" target="_blank" id="social-li">
-    <img src="images/linkedin-transp.png" alt="LinkedIn page for zoe rem">
+    <img src="images/linkedin-transp.png" alt="LinkedIn page for iChristopher">
     </a>
 </div>
+<!--CONTACT ME SECTION END-->
 
+<!--FOOTER SECTION START-->
   <footer class="footer">
                  <div class="copyright">
                      <p>design by ichristopher 2020 | Style Points by <a href="http://apple.com" target="_blank" id="RHP">me</a>
@@ -102,9 +140,12 @@
                  </div>
                  <div class="social">
                      <a href="http://www.linkedin.com/in/chlloyd" target="_blank" id="social-li">
-                     <img src="images/linkedin-transp.png" alt="LinkedIn page for zoe rem">
+                     <img src="images/linkedin-transp.png" alt="LinkedIn page for Christopher Lloyd">
                      </a>
                  </div>
   </footer>
+  <!--FOOTER SECTION END-->
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="js/index.js"></script>
 </html>
