--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <li>|</li>
                         <li><a href="mailto:chrislloyd@me.com" class="navListItem" target="_blank">Contact</a></li>
                         <li>|</li>
-                        
+
                     </ul>
                 </nav>
             </div>
@@ -46,7 +46,7 @@
 <div><br><br><br><br><br><br>
   <!--PRELOADER-->
   <section class="grid">
-     <div class="gridChild preload"><img class="spinMe" src="images/preloaderG.png"></div>
+     <div class="gridChild preload"><img class="spinMe" src="images/spinner.png"></div>
          </div>
        </div>
      </div>
@@ -101,35 +101,24 @@
 <!--CUBBY SECTION END-->
 
 <!--CONTACT ME SECTION START00-->
-<div class="button" id="button1">
-    Click Me
-  </div>
+<section class="contactMeSection">
+<div class="button" id="button1">Click Me</div>
   <div class="hideMe"></div>
 
-  <div class="button" id="button2">
-    Click Me
-  </div>
-  <div class="cssChange"></div>
-
-  <div class="button" id="button3">
-    Click Me
-  </div>
-  <div class="appendMe"></div>
-
-  <button> Start Animation </button>
-  <div class="animate" style="background:#98bf21;height:100px;width:100px;position:absolute;"></div>
+  <button> Contact Me </button>
+  <div class="animate" style="background:purple;height:50px;width:100px;position:absolute;"></div>
 
 
 <!--CONTACT ME SECTION START-->
 <div class="copyright">
-    <p>BB<a href="http://apple.com" target="_blank" id="RHP">A</a>
-    <p>CC</p>
+    <p><a href="http://apple.com" target="_blank" id="RHP">iChristopher</a>
 </div>
-<div class="social">
-    <a href="file:///Users/chris/Desktop/GitHub/UX_UI_19/contact.html" target="_blank" id="social-li">
-    <img src="images/linkedin-transp.png" alt="LinkedIn page for iChristopher">
+<div class="contactMe">
+    <a href="http://www.linkedin.com/in/chlloyd" target="_blank" id="social-li">
+    <img src="images/contactMeButton.png" id="contactMeButton">
     </a>
 </div>
+</section>
 <!--CONTACT ME SECTION END-->
 
 <!--FOOTER SECTION START-->
@@ -140,7 +129,7 @@
                  </div>
                  <div class="social">
                      <a href="http://www.linkedin.com/in/chlloyd" target="_blank" id="social-li">
-                     <img src="images/linkedin-transp.png" alt="LinkedIn page for Christopher Lloyd">
+                     <img src="images/linkedin-transp.png">
                      </a>
                  </div>
   </footer>
