contact me button section
contact me button section

--- a/index.html
+++ b/index.html
@@ -102,22 +102,20 @@
 
 <!--CONTACT ME SECTION START00-->
 <section class="contactMeSection">
-<div class="button" id="button1">Click Me</div>
-  <div class="hideMe"></div>
 
-  <button> Contact Me </button>
-  <div class="animate" style="background:purple;height:50px;width:100px;position:absolute;"></div>
+
+
+<div class="animate" style="background:#FEF9ED;height:50px;width:100px;position:absolute;"></div>
+
 
 
 <!--CONTACT ME SECTION START-->
-<div class="copyright">
-    <p><a href="http://apple.com" target="_blank" id="RHP">iChristopher</a>
-</div>
-<div class="contactMe">
-    <a href="http://www.linkedin.com/in/chlloyd" target="_blank" id="social-li">
-    <img src="images/contactMeButton.png" id="contactMeButton">
-    </a>
-</div>
+<div class="iChristopherLink">
+    <p><a href="http://www.linkedin.com/in/chlloyd" target="_blank" id="RHP">iChristopher</a>
+    </p>
+  </div>
+
+<button id="contactMeButton">Contact Me</button>
 </section>
 <!--CONTACT ME SECTION END-->
 
