--- a/index.html
+++ b/index.html
@@ -133,6 +133,18 @@
   </footer>
   <!--FOOTER SECTION END-->
   </body>
+  <!-- Global site tag (gtag.js) - Google Analytics START-->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179504610-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-179504610-1');
+  </script>
+<!-- Global site tag (gtag.js) - Google Analytics END -->
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/index.js"></script>
 </html>
