--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Merriweather&family=Montserrat&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Raleway&family=Roboto&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="css/style.css" type="text/css">
-
+  <!-- Hotjar Tracking Code for https://chrislloyd1685.github.io/UX_UI_19/ START-->
+  <script>
+      (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:2023161,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+  </script>
+  <!-- Hotjar Tracking Code for https://chrislloyd1685.github.io/UX_UI_19/ END-->
 </head>
 <body>
 <!--Navbar START-->
