--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </div>
 <div class="box2">
   <h2 id="heroText">Hello, I'm Chris,<br>
-    a customer service GURU turned UX/UI<br>
+    a customer experience GURU turned UX/UI<br>
     designer who loves to solve problems. I believe<br>
     research is the foundation to the perfect design.
   </h2>
